relocate reset button and fix horizontal scroll

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   color: white;
   font-family: 'Sen', Arial, Helvetica, sans-serif;
   text-align: center;
+  overflow-x: hidden;
 }
 
 button{
